--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "build": "npm install && npm run build",
     "start": "node dist/index.js"
   },
   "keywords": [],
